force-app/main/default/objects/Archivos_de_Oportunidad__c/Archivos_de_Oportunidad__c.object-meta.xml
<CustomObject>
    <label>Archivo de Oportunidad</label>
    <nameField>
        <label>Nombre de Archivos de Oportunidad</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archivos de Oportunidad</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>