force-app/main/default/objects/Archivos_de_Oportunidad__c/fields/Archivo__c.field-meta.xml
<CustomField>
    <fullName>Archivo__c</fullName>
    <label>Archivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>