force-app/main/default/objects/Archivos_de_Oportunidad__c/fields/ArchivoContent__c.field-meta.xml
<CustomField>
    <fullName>ArchivoContent__c</fullName>
    <label>ArchivoContent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>