force-app/main/default/objects/Archivos_de_Oportunidad__c/fields/Carpeta_Archivo__c.field-meta.xml
<CustomField>
    <fullName>Carpeta_Archivo__c</fullName>
    <label>Carpeta Archivo</label>
    <type>Url</type>
</CustomField>