force-app/main/default/objects/Archivos_de_Oportunidad__c/fields/Codigo_Archivo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Archivo__c</fullName>
    <label>Codigo Archivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>