force-app/main/default/objects/Archivos_de_Oportunidad__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Archivos de Oportunidad</relationshipLabel>
    <relationshipName>Archivos_de_Oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>