force-app/main/default/objects/Archivos_de_Oportunidad__c/fields/Tipo_de_Archivo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Archivo__c</fullName>
    <label>Tipo de Archivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>